# anthropic-bedrock

./: README.md
docs/: package-lock.json  package.json  theme.config.jsx
docs/src/pages/: _app.tsx  _meta.json  index.mdx
docs/src/pages/examples/: _meta.json  chatbot.mdx  index.mdx  summarization.mdx  upload-pdf.mdx
docs/src/pages/python/: _meta.json  async.mdx  chat.mdx  client.mdx  completion.mdx  contact.mdx  count-tokens.mdx  error-handling.mdx  index.mdx  models.mdx  streaming.mdx
docs/src/pages/typescript/: _meta.json  chat.mdx  client.mdx  completion.mdx  contact.mdx  count-tokens.mdx  error-handling.mdx  faq.mdx  index.mdx  models.mdx  streaming.mdx
python/: main.py
python/bedrock-anthropic/: LICENSE  README.md  pyproject.toml
python/bedrock-anthropic/src/bedrock_anthropic/: __init__.py  async_client.py  client.py
python/bedrock-anthropic/src/bedrock_anthropic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/bedrock-anthropic/tests/: test_client.py
typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: client.ts  index.ts
typescript/src/__tests__/: client.test.ts
